--- a/main.html
+++ b/main.html
@@ -10,11 +10,25 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
-			
+			for(let i=0;i<arr.length;i++){
+				if(arr.length==0 && arr[i]==arr[i+1] && arr.length==1){
+					return -Infinity;
+				}
+			else{
+			let max=-Infinity;
+			let secondMax=-Infinity;
+			for(let i=0;i<arr.length;i++){
+				if(arr[i>max]){
+					max=arr[i];
+					secondMax=max;
+				}
+				return secondMax;
+			}
+		 }
 		}
 
 		function Main() {
-			var n = prompt("Enter the number of elements");
+			// var n = prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
 				arr[i] = prompt("Enter element " + (i+1));
